[tool.poetry]
name = "jupyter-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
bokeh = "^2.3.2"
jupyter = "^1.0.0"
numpy = "*"
ortools = "^9.0.9048"
pandas = "^1.2.4"
plotnine = "^0.8.0"
psycopg2 = "^2.8.6"
scikit-learn = "^1.0.1"
scipy = "*"
statsmodels = "^0.12.2"
tensorflow = "^2.5.0"
tensorflow-probability = "^0.12.2"
cmdstanpy = "^0.9.76"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
